# Adaptive-Texture-Sampling

./: CMakeLists.txt  CMakePresets.json  README.md
.quail/: blender.txt  cmake.txt  gimp.txt  quail.txt
.quail/cmd/: blender_time.ps1  test.ps1
.quail/cmd/cmake/: refresh.bat
.quail/cmd/gimp/: pass_and_call_via_env_vars.ps1
cycles/: 1.blend  runner.py
dependencies/: CMakeLists.txt
dependencies/bluelib/include/blue/: blue.hpp
final/: numeric_01_02_2026.txt
gimp/: difference.py
project/: .typos.toml
project/CPU/: CMakeLists.txt
project/CPU/inc/: asset.hpp  constants.hpp  heading.hpp  image.hpp  settings.hpp  uniform.hpp
project/CPU/res/shaders/compute/: basic.comp
project/CPU/res/shaders/screen/: framebuffer.frag  framebuffer_depth.frag  framebuffer_edge.frag  framebuffer_fxaa_3_10.frag  framebuffer_fxaa_3_11.frag  framebuffer_msaa.frag  framebuffer_msaa_640.frag
project/CPU/res/shaders/world/: cube.frag  cube.vert  cube_nedi.frag
project/CPU/src/: main.cpp
project/GPU/: CMakeLists.txt
project/GPU/inc/: heading.cuh  texture.cuh
project/GPU/inc/cuda/: edge.cuh  edge2.cuh  framework.cuh  test.cuh
project/GPU/res/shaders/screen/: framebuffer.frag  framebuffer.vert  framebuffer_edge.frag
project/GPU/res/shaders/world/: cube_nedi.frag
project/GPU/src/: main.cu
project/comp/: CMakeLists.txt
project/comp/src/: main.cpp
project/glib/: CMakeLists.txt
project/glib/inc/glib/: camera.hpp  framebuffer.hpp  gl.hpp  glsl.hpp  mesh.hpp  meshes_dd.hpp  meshes_ddd.hpp  shader.hpp  texture.hpp  transform.hpp  uniform.hpp
project/other/: CMakeLists.txt
project/other/src/: main.cu
